# lidlens.ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  auth.config.ts  auth.ts  config.yaml  docker-compose.hub.yaml  docker-compose.yaml  middleware.ts  next.config.js  package-lock.json  package.json  pyproject.toml  supervisord.conf
.github/workflows/: docker-publish.yml
app/: layout.tsx  page.tsx
app/api/assets/: route.ts
app/api/extract/: route.ts
app/budget/: page.tsx
app/extract/: page.tsx
app/login/: page.tsx
app/pipeline/: page.tsx
app/profile/: page.tsx
components/Dashboard/: SpendingInsights.tsx  TransactionFilters.tsx  TransactionModal.tsx
components/MailAttachmentExtractor/: .env.example  main.py  pyproject.toml  test_main.py
data/: cards.json.example  manual_data.json
data/adhoc/: 1774070394145-demo_statement.txt
k8s/: kustomization.yaml
k8s/base/: configmap.yaml  dashboard-deployment.yaml  ingress.yaml  namespace.yaml  network-policy.yaml  prefect-server.yaml  pvc.yaml  secret.yaml
k8s/crossplane/: claim.yaml  composition.yaml  provider.yaml
lib/: calculations.ts  category-classifier.ts  category-colors.ts  currency-converter.ts  data-loader.ts  db.ts  env-update.ts  password-generator.ts  session.ts
pipeline/: __init__.py  adhoc_extractor.py  config_loader.py  flows.py  json_to_csv.py  pdf_extraction.py  pii_guard.py  rag_engine.py  unlocker.py  validate_extractions.py  watcher.py
scripts/: build_master_csv.py  extract_single.py  generate_protected_demo.py
types/: pdf-parse.d.ts
(+26 files in other folders)
